--- a/cloud-app/src/routed-pages/routedPage.css
+++ b/cloud-app/src/routed-pages/routedPage.css
@@ -1,9 +1,3 @@
-.container{
-    display: flex;
-}
-.column {
-    flex: 50%;
-}
 .form-border {
     position: absolute;
     top: 24px;
@@ -18,6 +12,8 @@
     background: none;
     z-index: 1;
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
+    padding-left: 14px!important;
+    padding-right: 14px!important;
   }
 
   /* Hide the placeholder texts (a) */
